--- a/views/signup.erb
+++ b/views/signup.erb
@@ -7,6 +7,13 @@
 </head>
 <body>
 
+	<% if session[:signup_error] %>
+	<div class="error">
+		<h3>Error!</h3>
+		<p><%= session[:signup_error] %></p>
+	</div>
+	<% session[:signup_error] = nil %>
+	<% end %>
 	<form action="/signup" method="post">
 		<input type="text" name="name" placeholder="User Name">
 		<input type="text" name="mail" placeholder="Mail Address">
