add simple view

--- a/views/index_session.erb
+++ b/views/index_session.erb
@@ -3,9 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>ダッシュボード - Keypod</title>
 </head>
 <body>
-
+	<a href="/logout">ログアウト</a>
+	<div>
+		<div><h1>タイトル</h1></div>
+		<div><small>説明</small></div>
+		<div><a href="aaa">編集</a> <a href="aaa">削除</a></div>
+	</div>
 </body>
 </html>
