--- a/views/signup.erb
+++ b/views/signup.erb
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>サインアップ - Keypod</title>
 </head>
 <body>
 
 	<% if session[:signup_error] %>
-	<div class="error">
-		<h3>Error!</h3>
-		<p><%= session[:signup_error] %></p>
-	</div>
-	<% session[:signup_error] = nil %>
+		<div class="error">
+			<h3>エラー項目があります</h3>
+			<p><%= session[:signup_error] %></p>
+		</div>
+		<% session[:signup_error] = nil %>
 	<% end %>
 	<form action="/signup" method="post">
 		<input type="text" name="name" placeholder="User Name">
