--- a/views/index.erb
+++ b/views/index.erb
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>ホーム - Keypod</title>
 </head>
 <body>
-
+	<h1>Keypod</h1>
+	<a href="/login">ログイン</a>
+	<a href="/signup">サインアップ</a>
 </body>
 </html>
