add define 'session_user', and add function of workspace create

--- a/views/index_session.erb
+++ b/views/index_session.erb
@@ -7,10 +7,13 @@
 </head>
 <body>
 	<a href="/logout">ログアウト</a>
+	<a href="/workspace/create">ワークスペースの作成</a>
+	<% @workspaces.each do |workspace| %>
 	<div>
-		<div><h1>タイトル</h1></div>
-		<div><small>説明</small></div>
+		<div><h1><%= workspace.name %></h1></div>
+		<div><small><%= workspace.description %></small></div>
 		<div><a href="aaa">編集</a> <a href="aaa">削除</a></div>
 	</div>
+	<% end %>
 </body>
 </html>
