fix function of workspace create

--- a/views/workspace_create.erb
+++ b/views/workspace_create.erb
@@ -10,7 +10,7 @@
 	<form action="/workspace/create" method="post">
 		<input type="text" name="name" placeholder="ワークスペースのタイトル">
 		<input type="text" name="description" placeholder="説明">
-		<input type="submit" value="ログイン">
+		<input type="submit" value="ワークスペースを作成">
 	</form>
 
 </body>
