--- a/views/login.erb
+++ b/views/login.erb
@@ -4,21 +4,43 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ログイン - Keypod</title>
+	<link rel="stylesheet" href="/assets/css/login.css">
 </head>
 <body>
 
-	<% if session[:signin_error] %>
-		<div class="error">
-			<h3>エラー項目があります</h3>
-			<p><%= session[:signin_error] %></p>
+	<div class="form">
+
+		<div class="logo">
+			<a href="/"><img src="/assets/images/logo_accent.svg" alt="logo"></a>
 		</div>
-		<% session[:signin_error] = nil %>
-	<% end %>
-	<form action="/login" method="post">
-		<input type="text" name="mail" placeholder="メールアドレス">
-		<input type="password" name="password" placeholder="パスワード">
-		<input type="submit" value="ログイン">
-	</form>
+
+			<% if session[:signin_error] %>
+				<div class="error">
+					<h4><%= session[:signin_error] %></h4>
+				</div>
+				<% session[:signin_error] = nil %>
+			<% end %>
+
+		<form action="/login" method="post">
+			<div class="text-input">
+				<label for="mail">メールアドレス</label>
+				<input type="text" name="mail" id="mail" placeholder="" />
+				<span class="separator"> </span>
+			</div>
+
+			<div class="text-input">
+				<label for="password">パスワード</label>
+				<input type="password" name="password" id="password" placeholder="" />
+				<span class="separator"> </span>
+			</div>
+
+			<div class="form-bottom">
+				<input type="submit" id="submit" value="Submit"  />
+				<a href="/signup">アカウントを持っていませんか?<br>サインアップする</a>
+			</div>
+
+		</form>
+	</div>
 
 </body>
 </html>
