--- a/views/login.erb
+++ b/views/login.erb
@@ -12,6 +12,7 @@
 
 		<div class="logo">
 			<a href="/"><img src="/assets/images/logo_accent.svg" alt="logo"></a>
+			<h1>ログイン</h1>
 		</div>
 
 			<% if session[:signin_error] %>
