fix login design

--- a/views/signup.erb
+++ b/views/signup.erb
@@ -26,25 +26,25 @@
 
 			<div class="text-input">
 				<label for="name">ユーザー名</label>
-				<input type="text" name="name" id="name" placeholder="" />
+				<input type="text" name="name" id="name" placeholder="7文字以上の英数字" />
 				<span class="separator"> </span>
 			</div>
 
 			<div class="text-input">
 				<label for="mail">メールアドレス</label>
-				<input type="text" name="mail" id="mail" placeholder="" />
+				<input type="text" name="mail" id="mail" placeholder="keypod@example.com" />
 				<span class="separator"> </span>
 			</div>
 
 			<div class="text-input">
 				<label for="password">パスワード</label>
-				<input type="password" name="password" id="password" placeholder="" />
+				<input type="password" name="password" id="password" placeholder="7文字以上の文字列" />
 				<span class="separator"> </span>
 			</div>
 
 			<div class="text-input">
 				<label for="password_confirmation">パスワードの確認</label>
-				<input type="password" name="password_confirmation" id="password_confirmation" placeholder="" />
+				<input type="password" name="password_confirmation" id="password_confirmation" placeholder="上と同じ文字列を入力" />
 				<span class="separator"> </span>
 			</div>
 
