--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,7 @@
 	<title>ホーム - Keypod</title>
 	<link rel="stylesheet" href="/assets/css/index.css">
 	<script src="https://kit.fontawesome.com/e04b7045d3.js" crossorigin="anonymous"></script>
+	<link rel="shortcut icon" href="/assets/images/favicon.ico">
 </head>
 <body>
 	<header>
