--- a/views/login.erb
+++ b/views/login.erb
@@ -25,13 +25,13 @@
 		<form action="/login" method="post">
 			<div class="text-input">
 				<label for="mail">メールアドレス</label>
-				<input type="text" name="mail" id="mail" placeholder="" />
+				<input type="text" name="mail" id="mail" placeholder="keypod@example.com" />
 				<span class="separator"> </span>
 			</div>
 
 			<div class="text-input">
 				<label for="password">パスワード</label>
-				<input type="password" name="password" id="password" placeholder="" />
+				<input type="password" name="password" id="password" placeholder="7文字以上の文字列" />
 				<span class="separator"> </span>
 			</div>
 
