--- a/views/workspace.erb
+++ b/views/workspace.erb
@@ -7,10 +7,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="/assets/css/workspace.css">
+		<script src="https://kit.fontawesome.com/e04b7045d3.js" crossorigin="anonymous"></script>
   </head>
   <body>
+		<header>
+			<div>
+				<a href="/">
+					<i class="fas fa-step-backward"></i>
+					<h1>戻る</h1>
+				</a>
+			</div>
+			<div>
+				<a href="/workspace/edit/<%= @workspace.url  %>">
+					<i class="fas fa-edit"></i>
+				</a>
+			</div>
+		</header>
 
-		<div id="p5_loading" style="position: relative;">音楽ファイルを読み込み中...</div>
+		<div id="p5_loading">
+			<div class="hollow-dots-spinner" :style="spinnerStyle">
+				<div class="dot"></div>
+				<div class="dot"></div>
+				<div class="dot"></div>
+			</div>
+		</div>
 
 		<div class="keyboard">
 			<div class="keyboard__row">
@@ -201,7 +222,7 @@
 		<% @strs.each do |str| %>
 			<% unless @workspace.keys.find_by(key: str).path == nil %>
 				<% if @workspace.keys.find_by(key: str).data_type == "youtube" %>
-					<div id="player_<%= str %>" style="visibility:hidden;"></div>
+					<div id="player_<%= str %>" style="display: none;"></div>
 				<% end %>
 			<% end %>
 		<% end %>
